<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">	
	<!-- output device strings -->
	<string name="menu_output_device_settings">Output Device</string>	
	<string name="title_output_device">Output Device</string>
	<string name="label_select_output_device">Select Pass Output Device</string>
	<string name="label_select_bt_dongle">Select Bluetooth Device</string>
	<string name="btn_connect">Connect</string>
	<string name="btn_connect_summary">Tap to pair with selected dongle</string>
	<string name="msg_select_first">Please select a dongle first</string>
	<string name="msg_connecting_to">Connecting to %1$s…</string>
	<string name="settings_output_device_key">settings_output_device_key</string>

	<string name="label_unknown_device">Unknown</string>

	<string name="btn_unpair">Unpair</string>
	<string name="btn_unpair_summary">Tap to unpair this device</string>

	<string name="msg_pairing">Pairing…</string>
	<string name="msg_unpairing">Unpairing…</string>
	<string name="msg_pair_failed">Pair request failed</string>
	<string name="msg_unpair_failed">Unpair request failed</string>
	<string name="msg_bluetooth_disabled">Bluetooth is disabled</string>
	<string name="msg_saved_device_not_found">Previously selected: %1$s (not currently visible)</string>
		
	<string name="output_device_id_key">pref_output_dongle_id</string>
	<string name="output_device_name_key">pref_output_dongle_name</string>

	<string name="msg_sent_ok">Password sent</string>
	<string name="msg_send_failed">Send failed</string>

	<!-- Keys and labels -->
	<string name="output_device_enable_title">Enable device output</string>
	<string name="output_device_send_new_line_key">pref_output_send_new_line</string>
	<string name="label_send_new_line">Send new line</string>

    <!-- Pair/Unpair row -->
    <string name="label_bt_pairing">Bluetooth pairing</string>
    <string name="btn_pair">Pair</string>

	<!-- Output device extra prefs -->
	<string name="pref_device_type_key">pref_device_type</string>
	<string name="pref_keyboard_layout_key">pref_keyboard_layout</string>

	<string name="label_device_type">Device Type</string>
	<string name="label_keyboard_layout">Keyboard Layout</string>

	<string name="device_type_blue_kb">Blue Keyboard</string>

	<!-- Toast/messages -->
	<string name="msg_layout_set_ok">Keyboard layout set</string>
	<string name="msg_layout_set_failed">Failed to set keyboard layout</string>
	<string name="msg_no_device_selected">Select an output device first</string>
	<string name="msg_failed_connect_device">Failed to connect to device</string>
	
	<!-- BluKeyborg app-specific strings -->
	<string name="app_name">BluKeyborg</string>
	<string name="label_history">Sent history</string>
	<string name="hint_input_text">Type the text to send…</string>
	<string name="btn_settings">Settings</string>
	<string name="btn_send">Send</string>
	<string name="btn_special_keys">Special keys</string>
	<string name="msg_no_text_to_send">Nothing to send</string>
	<string name="title_special_keys">Special keys</string>

	<string name="btn_full_keyboard">Full keyboard</string>
	<string name="msg_failed_enable_fast_keys">Failed to enable fast keys</string>
	<string name="cd_back">Back</string>
	<string name="pref_send_newline">Send new line</string>
	<string name="title_settings">Settings</string>

	<!-- Volume key mapping -->
	<string name="pref_volume_up_action_key">pref_volume_up_action</string>
	<string name="pref_volume_down_action_key">pref_volume_down_action</string>

	<string name="pref_volume_up_action_title">Volume Up action</string>
	<string name="pref_volume_down_action_title">Volume Down action</string>
	
	<string name="pref_remote_actions_panel_key">pref_remote_actions_panel</string>

	<string name="title_remote_actions_panel">Remote Actions</string>
	<string name="summary_remote_actions_panel">Choose which remote panel to show</string>

	<!-- new devices layout -->	
	<string name="btn_devices">Devices</string>

	<string name="title_devices">Devices</string>
	<string name="devices_empty">No devices available (paired, provisioned, or in range).\n\nMake sure your BluKeyboard dongle is powered on and nearby.</string>
	<string name="back">Back</string>

	<string name="device_setup">Setup</string>
	<string name="device_forget">Forget device</string>

</resources>
